--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ fontawesome-free>=5.15.4
 django-heroicons>=0.0.8
 pytest-django>=4.5
 channels>=4.0
+# New dependencies for enhanced spreadsheet-like editing
+django-widget-tweaks>=1.5.0
+django-datatables-view>=1.19.1
