Update .env.sample with database configuration and enhance .gitignore to include node_modules

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,13 @@
+# Database Configuration
+DATABASE_URL=postgresql://username:password@localhost:5432/council_finance_v3
+# Alternative for development with SQLite:
+# DATABASE_URL=sqlite:///db.sqlite3
+DATABASE_PORT=5432
+DATABASE_NAME=sample_name
+DATABASE_USER=sample_user
+DATABASE_PASSWORD=sample_password
+PSQL_COMMAND="sample command"
+
 # Security Settings (Production)
 SECURE_SSL_REDIRECT=False
 SECURE_HSTS_SECONDS=0
