Enhance God Mode functionality with new council management features
- Updated `god_mode.html` to implement a modern two-column grid layout.
- Added sections for creating new councils and importing council data with progress indicators.
- Implemented JavaScript for managing progress during council creation and import operations.
- Updated `admin.py` to handle council creation and import logic, including validation and error handling.
- Introduced new statistics for councils with and without data, and active councils today.
- Added a CSV template for council imports to guide users on required fields.
- Updated `requirements.txt` to include pandas and openpyxl for data handling capabilities.

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ whitenoise>=6.5.0
 # New dependencies for enhanced spreadsheet-like editing
 django-widget-tweaks>=1.5.0
 django-datatables-view>=1.19.1
+# Data import/export capabilities
+pandas>=2.0.0
+openpyxl>=3.0.0
