Add AI integration keys to .env.sample for enhanced functionality

--- a/.env.sample
+++ b/.env.sample
@@ -31,3 +31,7 @@ ALLOWED_HOSTS=localhost,127.0.0.1,.your-domain.com
 # Development Tools
 DJANGO_DEBUG_TOOLBAR=True
 DJANGO_EXTENSIONS=True
+
+# AI Integrations
+ANTHROPIC_API_KEY=secret
+OPENAI_API_KEY=secret
