Add AI Analysis functionality and management dashboard
- Implemented AI analysis sidebar in council detail view with loading, error, and analysis content states.
- Created JavaScript class for managing AI analysis loading and display.
- Added API endpoints for fetching AI analysis and checking analysis status.
- Developed views for AI management including model, template, and configuration forms.
- Updated URLs to include AI management routes.
- Enhanced the God Mode dashboard to include AI management options.
- Added a debug script for testing AI analysis service functionality.
- Updated requirements to include OpenAI library for AI analysis support.

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,5 @@ django-datatables-view>=1.19.1
 # Data import/export capabilities
 pandas>=2.0.0
 openpyxl>=3.0.0
+# AI Analysis support
+openai>=1.0.0
