--- a/.env.sample
+++ b/.env.sample
@@ -18,6 +18,7 @@ SESSION_COOKIE_SECURE=False
 
 # Email Providers
 BREVO_API_KEY=sample
+ERROR_ALERTS_EMAIL_ADDRESS=admin@example.com
 
 # Logging
 LOG_LEVEL=INFO
