Add email templates for account management notifications
- Created email_change_confirmation.html for confirming email address changes.
- Created email_change_notification.html to notify users of email change requests.
- Added initial_confirmation.html for welcoming new users and confirming their email addresses.
- Introduced reconfirm_password_change.html to request email confirmation after a password change.

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,9 @@ pandas>=2.0.0
 openpyxl>=3.0.0
 # AI Analysis support
 openai>=1.0.0
+# Enhanced authentication and rate limiting
+django-allauth>=0.57.0
+django-ratelimit>=4.1.0
+django-extensions>=3.2.0
+# For better email handling
+django-ses>=3.5.0
