feat: Update .gitignore to include Claude settings directory and files

--- a/.gitignore
+++ b/.gitignore
@@ -79,4 +79,8 @@ Thumbs.db
 # Node.js Modules
 node_modules/
 .github/prompts/prompts.prompt.md
+
+#Claude settings
 .claude/settings.local.json
+.claude/*
+.claude/
