--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Django app for Council Finance Counters with Tailwind CSS",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
     "build-css": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch",
     "build-css-prod": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --minify"
   },
@@ -15,7 +18,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.4.0"
+    "@vitejs/plugin-react": "^4.7.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^3.4.0",
+    "vite": "^6.3.5"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10"
