Refactor FlaggingSystem initialization to prevent multiple instances
- Added a check to ensure FlaggingSystem is only declared if it doesn't already exist.
- Modified the DOMContentLoaded event listener to prevent creating multiple instances of FlaggingSystem.

--- a/static/frontend/.vite/manifest.json
+++ b/static/frontend/.vite/manifest.json
@@ -1,11 +1,11 @@
 {
   "src/main.jsx": {
-    "file": "main-D1r43E1k.js",
+    "file": "main-BlefOZ0N.js",
     "name": "main",
     "src": "src/main.jsx",
     "isEntry": true,
     "css": [
-      "main-C6G_3qQV.css"
+      "main-BlzmEwI8.css"
     ]
   }
 }
