Refactor code structure for improved readability and maintainability

--- a/static/frontend/.vite/manifest.json
+++ b/static/frontend/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "src/main.jsx": {
-    "file": "main-BlefOZ0N.js",
+    "file": "main-Bv01dmsA.js",
     "name": "main",
     "src": "src/main.jsx",
     "isEntry": true,
