--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "serve": "vite preview",
     "build-css": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch",
-    "build-css-prod": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --minify"
+    "build-css-prod": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --minify",
+    "clean-builds": "node frontend/clean-build.js"
   },
   "keywords": [
     "django",
