feat: Add mobile-first components for council edit interface
- Implement ProgressTracker component for visual progress tracking with gamification features.
- Create TabNavigation component for mobile and desktop navigation with progress indicators.
- Develop ValidationSystem component for displaying validation errors and success messages.
- Introduce YearSelector component for selecting financial years with swipe gestures on mobile.
- Add useDeviceType hook for detecting device type and screen size.
- Integrate CouncilEditApp into main application initialization.
- Create syntax-only test runner for validating Python syntax, React components, build artifacts, and Django templates.

--- a/static/frontend/.vite/manifest.json
+++ b/static/frontend/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "src/main.jsx": {
-    "file": "main-m1lwcea2.js",
+    "file": "main-_xUhIr_S.js",
     "name": "main",
     "src": "src/main.jsx",
     "isEntry": true,
