--- a/static/frontend/.vite/manifest.json
+++ b/static/frontend/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "src/main.jsx": {
-    "file": "main-_xUhIr_S.js",
+    "file": "main-CIQTZiVE.js",
     "name": "main",
     "src": "src/main.jsx",
     "isEntry": true,
