Enhance Vite configuration for development and production builds
- Added conditional output filenames for development to avoid cache issues.
- Introduced `isDevelopment` variable to determine the environment.
- Updated rollup output options to use stable filenames in development mode.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "NODE_ENV=development vite build",
+    "build:prod": "NODE_ENV=production vite build",
     "serve": "vite preview",
     "build-css": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch",
     "build-css-prod": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --minify",
