feat: Update README and .env.sample with new configuration options and detailed setup instructions

--- a/.env.sample
+++ b/.env.sample
@@ -36,3 +36,10 @@ DJANGO_EXTENSIONS=True
 # AI Integrations
 ANTHROPIC_API_KEY=secret
 OPENAI_API_KEY=secret
+
+# ADMIN USER
+ADMIN_USER=xxx
+ADMIN_PASSWORD=xxx
+
+# GitHub Token
+GITHUB_PERSONAL_ACCESS_TOKEN=xxx
