feat: Add Google API credentials to .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -43,3 +43,8 @@ ADMIN_PASSWORD=xxx
 
 # GitHub Token
 GITHUB_PERSONAL_ACCESS_TOKEN=xxx
+
+# Google Integrations
+# OAuth2 credentials for Google APIs
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
